<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="393dp"
            android:layout_height="66dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="2dp">

        <Button
                android:id="@+id/start"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:text="@string/user_name" />
    </LinearLayout>

    <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/please_tap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
            android:id="@+id/score"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="#00DA1F1F"
            android:text="@string/score"
            android:textSize="30dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count" />

    <TextView
            android:id="@+id/remaining_time"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:text="30"
            android:textSize="30dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/score"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ImageButton
            android:id="@+id/leftbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/count"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/target"
            app:srcCompat="@drawable/blue_blue" />

    <ImageButton
            android:id="@+id/rightbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="@+id/count"
            app:layout_constraintTop_toBottomOf="@+id/target"
            app:srcCompat="@drawable/red_red" />

    <ImageView
            android:id="@+id/target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score"
            app:srcCompat="@drawable/blue_red" />

    <TextView
            android:id="@+id/db"
            android:layout_width="385dp"
            android:layout_height="307dp"
            android:text="TextView"
            android:textSize="25dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>